lab1/Gramatica.g4
grammar Gramatica;

// ----------- Reglas sintacticas  ------------

//estas gramtica esta tomada del repositorio de brolo y se modifico un poco
prog:   stat+ ;

stat:   expr NEWLINE                 # printExpr
    |   ID '=' expr NEWLINE          # assign
    |   NEWLINE                      # blank
    ;

expr: '-' expr                       # unaryMinus
    | expr ('*'|'/') expr            # MulDiv
    | expr ('+'|'-') expr            # AddSub
    | INT                            # int
    | ID                             # id
    | '(' expr ')'                   # parens
    ;

MUL : '*' ; // define token for multiplication
DIV : '/' ; // define token for division
ADD : '+' ; // define token for addition
SUB : '-' ; // define token for subtraction
ID  : [a-zA-Z]+ ; // match identifiers
INT : [0-9]+ ; // match integers
NEWLINE:'\r'? '\n' ; // return newlines to parser (is end-statement signal)
WS  : [ \t]+ -> skip ; // toss out whitespace
